# axiom-assistant

./: .dockerignore  .env.example  .gitignore  AGENT_POLICY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MERGE_CONFLICT_RESOLUTION_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY_CERTIFICATE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
models/: .gitkeep  README.md
src/: lib.rs  main.rs
src/engine/: axiom_renderer.rs  deterministic_viz.rs  mod.rs
src/ipc/: contracts.rs  mod.rs  orchestrator.rs
src/modules/: deterministic.rs  mod.rs  neuro_symbolic.rs  probabilistic.rs
src/ui/: mod.rs  tauri_app.rs
tests/: integration_tests.rs
ui/: package.json
ui/src/: App.tsx
ui/src/styles/: axiom_dark.css
