[package]
name = "axiom-assistant"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = []
ui = ["tauri", "tauri-plugin-shell"]

[dependencies]
# Module A: Probabilistic
candle-core = { version = "0.8", features = ["cuda"], optional = true }
candle-transformers = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
tokenizers = { version = "0.21", optional = true }
hf-hub = { version = "0.3", optional = true }

# Module B: Deterministic
swipl = { version = "0.3", optional = true }
evalexpr = "11.3"

# Module C: Neuro-Symbolic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# IPC & Orchestration
tokio = { version = "1.42", features = ["full"] }
crossbeam = "0.8"

# UI (Tauri 2.0) - Optional
tauri = { version = "2.1", features = ["protocol-asset"], optional = true }
tauri-plugin-shell = { version = "2.0", optional = true }

# AxiomEngine Integration - Optional
wgpu = { version = "23.0", optional = true }
bytemuck = { version = "1.20", features = ["derive"], optional = true }
glam = { version = "0.29", optional = true }

# Utility crates for the local dev/demo implementation
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
regex = "1.7"

# Production dependencies - logging, error handling, security
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
